ブランド名の取得までOK

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -16,6 +16,6 @@
         <%= link_to f.image_url, f.image_url  %>    
       </br>
       <% end %>
-    <div/>
-  <div/>
-<div/>
+    </div>
+  </div>
+</div>
