--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
 </head>
 <body>
   <%= render 'layouts/header' %>      <!--フォルダ名/ファイル名-->
-  <div class "container">
+  <div class="container">
 <%= yield %>       <!--ここにerbファイルが埋め込まれる-->
   </div>
 </body>
