deviseのインストール終了

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -12,3 +12,8 @@
 <p>
   <%= link_to 'nokogiri実行!!', :controller => "items", :action => "new"  %>
 </p>
+
+
+<p>
+  <%= link_to '更新実行!!', items_compare_path  %>
+</p>
